--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <span>VIAJAR</span>
                         </div>
                         <div class="interes">
-                            <i class="fa-brands fa-apple"></i>
+                            <i class="fa-brands fa-windows"></i>
                             <span>WINDOWS</span>
                         </div>
                         <div class="interes">
